@startuml
class Circle {
+ double radio
+ <<Create>> Circle()
~ <<Create>> Circle(double)
~ <<Create>> Circle(double,String,boolean)
+ double getRadio()
+ void setRadio(double)
+ String toString()
}
abstract class Shape {
+ String color
+ boolean filled
+ <<Create>> Shape()
~ <<Create>> Shape(String,boolean)
+ String getColor()
+ void setColor(String)
+ boolean isFilled()
+ void setFilled(boolean)
+ String toString()
}
abstract class Shape.getArea {
- double area
+ double getArea()
+ void setArea(double)
}
abstract class Shape.getPerimeter {
- double perimeter
+ double getPerimeter()
+ void setPerimeter(double)
}
class Rectangle {
+ double width
+ double length
+ <<Create>> Rectangle()
~ <<Create>> Rectangle(double,double)
~ <<Create>> Rectangle(double,double,String,boolean)
+ double getWidth()
+ void setWidth(double)
+ double getLength()
+ void setLength(double)
+ String toString()
}
class Square {
+ double side
~ <<Create>> Square(double)
~ <<Create>> Square(double,double,String,boolean)
+ <<Create>> Square()
~ <<Create>> Square(double,String,boolean)
+ double getSide()
+ void setSide(double)
+ void setWidth(double)
+ void setLength(double)
+ String toString()
}


Shape <|-- Circle
Shape +.. Shape.getArea
Shape +.. Shape.getPerimeter
Shape <|-- Rectangle
Rectangle <|-- Square
@enduml